<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>runtime</artifactId>
        <groupId>org.assimbly</groupId>
        <version>5.1.0</version>
    </parent>

    <name>utils</name>
    <packaging>jar</packaging>

    <artifactId>utils</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.versions.rules>file:///${project.basedir}/../rules.xml</maven.versions.rules>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Temporary Staging Repository</name>
            <url>https://maven.pkg.github.com/assimbly/base</url>
        </repository>
    </distributionManagement>

    <dependencies>

        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>camel-base</artifactId>
            <version>${assimbly.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>common-base</artifactId>
            <version>${assimbly.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>spring-base</artifactId>
            <version>${assimbly.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>test-base</artifactId>
            <version>${assimbly.version}</version>
            <scope>test</scope>
           <exclusions>
            <exclusion>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
            </exclusion>
           </exclusions>
        </dependency>

        <dependency>
            <groupId>org.jasypt</groupId>
            <artifactId>jasypt</artifactId>
            <version>${jasypt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-jasypt</artifactId>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-bundle</artifactId>
            <version>${tika.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.assimbly</groupId>
            <artifactId>docconverter</artifactId>
            <version>${docconverter.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                        <configuration>
                            <toolchains>
                                <jdk>
                                    <version>21</version>
                                </jdk>
                            </toolchains>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
